🎸🐙 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,9 @@
    <div id="container">
       <header>
          <h1>
-            <img src="images/flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo1" />
-            <img src="images/flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo2" />
-            <img src="images/txlogo.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo3" />
+            <img src="flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo1" />
+            <img src="flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo2" />
+            <img src="txlogo.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo3" />
             tinley xeriscapes
          </h1>
       </header>
@@ -40,16 +40,19 @@
          </ul>
       </nav>
         
-      <aside>
+ <aside>
          <ul>
+		 <!--ref page 44-->
             <li>Blanket Flower</li>
             <li>Hedge Rose</li>
             <li>Little Bluestem</li>
          </ul>
       </aside>
+
     
       <article>
          <figure>
+             <img src="#" width="640" height="400" alt="" title="" id="plantImg" />
              <figcaption>
 
             </figcaption>
