🕰🦄 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title>Tinley Xeriscapes</title>
-   <link rel="stylesheet" media="screen and (min-device-width: 1000px)" href="tinley.css" />  
+   <link rel="stylesheet" media="screen and (min-device-width: 1000px)" href="styles.css" />  
    <link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet" type="text/css">
 </head>
 
