🏕👘 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,9 @@
    <div id="container">
       <header>
          <h1>
-            <img src="flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo1" />
-            <img src="flower.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo2" />
-            <img src="txlogo.png" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo3" />
+            <img src="https://cdn.glitch.com/8a1b3cd3-54ce-4fe1-9505-f65aa3773d79%2Fflower.png?v=1503962836820" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo1" />
+            <img src="https://cdn.glitch.com/8a1b3cd3-54ce-4fe1-9505-f65aa3773d79%2Fflower.png?v=1503962836820" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo2" />
+            <img src="https://cdn.glitch.com/8a1b3cd3-54ce-4fe1-9505-f65aa3773d79%2Ftxlogo.png?v=1503962836924" width="132" height="120" alt="Tinley Xeriscapes" title="" id="logo3" />
             tinley xeriscapes
          </h1>
       </header>
